crates/submilli-engine/src/snapshots/submilli_engine__lexer__tests__renders_unterminated_string_diagnostic.snap
---
source: crates/submilli-engine/src/lexer.rs
expression: rendered
---
error: unterminated string literal
 --> script.subm:1:9
  |
1 | let s = "hello
  |         ^^^^^^
